--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,9 @@
 # Dependencies
-markdown:         redcarpet
+markdown:         kramdown
 highlighter:      rouge
+plugins:
+  - jekyll-paginate
+  - jekyll-gist
 
 # Permalinks
 permalink:        pretty
