--- a/_config.yml
+++ b/_config.yml
@@ -10,15 +10,16 @@ permalink:        pretty
 # relative_permalinks: true
 
 # Setup
-title:            Hyde
-tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              http://hyde.getpoole.com
+title:            Priyam Parashar
+shorttitle:       'PP'
+tagline:          'Webpage'
+description:      'Personal and Research Webpage'
 baseurl:          /
+avatar:           /me.png
 
 author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
+  name:           'Priyam Parashar'
+#  url:            https://twitter.com/mdo
 
 paginate:         5
 
